# sapiens-mod-creation

./: .gitignore  .gitmodules  LICENSE  README.md
Examples/BigLeaves-Lua-world-example/: workshop.mjl
Examples/BigLeaves-Lua-world-example/scripts/common/: edgeDecal.lua
Examples/BigLeavesLuaWorldMod/: modInfo.lua
Examples/BlueUI-Lua-app-example/: modInfo.lua  workshop.mjl
Examples/BlueUI-Lua-app-example/scripts/: customAddedScript.lua
Examples/BlueUI-Lua-app-example/scripts/common/: material.lua
Examples/CModExample/: modinfo.lua
Examples/CModExample/scripts/: .luacheckrc
Examples/CModExample/scripts/common/: material.lua
Examples/FlatTerrain-cmod-world-example/: modInfo.lua
Examples/GreenFire/: modinfo.lua
Examples/GreenFire/scripts/common/: material.lua
Examples/LuaModExample/: modinfo.lua
Examples/LuaModExample/scripts/common/: material.lua
Examples/ResourceOverride-example/: .luacheckrc  modInfo.lua
Examples/ResourceOverride-example/fonts/fontFiles/: console24.fnt
Examples/TerrainExample/: modinfo.lua
Examples/TerrainExample/shaders/: fireParticle.frag.spv
Examples/src/FlatTerrain/src/: FlatTerrainHeight.c
SPlugins/Examples/SPVanilla/Linux/: CMakeLists.txt  build.sh
SPlugins/Linux/: CMakeLists.txt
SPlugins/Windows/: SPCommon.sln
SPlugins/Windows/SPCommon/: SPCommon.vcxproj  SPCommon.vcxproj.filters
SPlugins/include/: SPBiome.h  SPClimate.h  SPCommon.h  SPHeight.h  SPMath.h  SPNoise.h  SPParticles.h  SPRainfall.h  SPRand.h
SPlugins/lib/: SPCommon.lib  libSPCommon.dylib
SPlugins/src/: SPMath.c  SPNoise.c  SPRand.c
(+21 files in other folders)
